syntax = "proto3";

package user;

option go_package = ".;user";

// Запрос для получения пользователя по ID
message GetUserRequest {
  int64 id = 1;
}

// Ответ на запрос получения пользователя
message GetUserResponse {
  int64 id = 1;
  string name = 2;
  string email = 3;
}

// Запрос для обновления пользователя
message UpdateUserRequest {
  int64 id = 1;
  string name = 2;
  string email = 3;
  string password = 4;
}

// Ответ на обновление пользователя
message UpdateUserResponse {
  bool success = 1;
}

// Запрос для удаления пользователя
message DeleteUserRequest {
  int64 id = 1;
}

// Ответ на удаление пользователя
message DeleteUserResponse {
  bool success = 1;
}

// Сервис для управления пользователями
service User {
  rpc GetUser(GetUserRequest) returns (GetUserResponse);
  rpc UpdateUser(UpdateUserRequest) returns (UpdateUserResponse);
  rpc DeleteUser(DeleteUserRequest) returns (DeleteUserResponse);
}